tests/saved_state_reinit_git/saved_state_reinit_git.exp
Creating git repo

Creating initial commit

Creating saved state

Creating commit 2

Creating second saved state

Moving back to initial commit

Found correct merge base hash: Yes

Moving to commit 2

Should find new errors:
Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `dep2` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:7:2
   7| (dep2: string);
       ^^^^

References:
   dep2.js:3:16
   3| export default 123;
                     ^^^ [1]
   test.js:7:8
   7| (dep2: string);
             ^^^^^^ [2]



Found 1 error

Found correct merge base hash: Yes
